# regulasi-id-corpus-prep

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
docs/: DECISION_TREE.md  PROFILE_GUIDE.md  VALIDATION_GUIDE.md
examples/sample-output/: SEOJK-19-2023.meta.json  SEOJK-19-2023.raw.meta.json  SEOJK-19-2023.raw.txt  SEOJK-19-2023.txt
regulasi_id_corpus_prep/: __init__.py  cli.py  extract.py  normalize.py  profile.py  validate.py
regulasi_id_corpus_prep/profiles/: _template.yaml  ojk-pojk.yaml  ojk-seojk.yaml  ri-pp.yaml  ri-uu.yaml  uu-konsolidasi.yaml
scripts/: add_license_headers.py
tests/: __init__.py  conftest.py  test_extract.py  test_integration.py  test_normalize.py  test_profile.py  test_validate.py
tests/fixtures/profiles/: malformed_profile.yaml  test-minimal.yaml
